Updating toolkit for release 2.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "portage"]
 	path = portage
 	url = ../../laristra/portage.git
+[submodule "libristra"]
+	path = libristra
+	url = ../../laristra/libristra.git
+[submodule "tangram"]
+	path = tangram
+	url = ../../laristra/tangram.git
