--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+add_subdirectory(libristra)
 add_subdirectory(flecsi)
 add_subdirectory(flecsi-sp)
 add_subdirectory(portage)
+add_subdirectory(tangram)
